--- a/first-app/.gitignore
+++ b/first-app/.gitignore
@@ -10,6 +10,11 @@
 # dependencies
 /node_modules
 
+# environment
+/environments
+/environments/environment.ts
+/environments/environment.prod.ts
+
 # profiling files
 chrome-profiler-events*.json
 
