--- a/first-app/package.json
+++ b/first-app/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/firebase": "^3.2.1",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.9.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
