--- a/clients/package.json
+++ b/clients/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
     "rxjs": "~6.6.0",
